--- a/hackclub.com.yaml
+++ b/hackclub.com.yaml
@@ -1728,7 +1728,7 @@ hackinux:
 hacklet:
   ttl: 600
   type: CNAME
-  value: scaling-carnival-4jg9ye4.pages.github.io.
+  value: hackclub.github.io.
 hackpad:
   ttl: 600
   type: CNAME
